[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kami"
version = "0.1.0"
authors = [{name = "Kent Bull", email = "kent@kentbull.com"}]
description = "A KERI implementation using AsyncIO for Muggles"
readme = "README.md"
requires-python = ">3.12"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent"
]

[project.scripts]
kami = "kami.app.cli.kami:main"