[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kami"
version = "0.1.0"
authors = [
    {name = "Samuel Smith", email = "smith.samuel.m@gmail.com"},
    {name = "Phil Feairheller", email = "philf@example.com"},
    {name = "Kevin Griffin", email = "keving@example.com"},
    {name = "Kent Bull", email = "kent@kentbull.com"}
]
description = "A KERI implementation using AsyncIO for Muggles"
readme = "README.md"
requires-python = ">3.12"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent"
]

[project.scripts]
kami = "kami.app.cli.kami:main"

[tool]
pytest = {asyncio_mode = "auto"}

[tool.mypy]
strict = true
mypy.exclude = [
    "tests", "build", "dist", "venv", "node_modules", ".tox", ".nox", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".svn", ".vscode", "__pypackages__", ".idea", ".venv", ".bzr", ".pants.d", ".projectile", ".pytype", ".ruff_cache", "_build", "buck-out", ".idea", ".vscode"
]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F"]
lint.ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".idea",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".projectile",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "tests",
    "venv"
]

line-length = 120